Fix scrollbar appear in mozilla, add gh-pages deps

--- a/src/components/GameHeader/GameHeader.module.scss
+++ b/src/components/GameHeader/GameHeader.module.scss
@@ -7,7 +7,7 @@
   padding: 0 1.125rem;
   font: bold 1.125rem 'Comfortaa', cursive;
   background: linear-gradient(90deg, #f4f5f7 12.5%, #eeeeef 100%);
-	box-shadow: 0px 11px 30px -10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 11px 30px -10px rgba(0, 0, 0, 0.15);
 }
 
 .date {
@@ -58,7 +58,7 @@
 .scoresWrapper {
   display: flex;
   align-items: flex-end;
-	margin-left: 5px;
+  margin-left: 5px;
 }
 
 .teamNames {
@@ -138,4 +138,10 @@
 
 ::-webkit-scrollbar-thumb {
   background: #d5d5d5;
+}
+
+@supports (scrollbar-width: thin) {
+  * {
+    scrollbar-width: none;
+  }
 }
